# FamilyShoppingBotTG_Group2

./: .env  .gitignore  README.md  database.db  keys.py  libraries  menu.py  pyproject.toml
familybot/: main.py
familybot/bot/: database.db  menu.py
familybot/db/: crud.py  database.py  main.py  models.py  test.py
